1998-03-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* find_executable.c (maybe_executable): Add fd argument
	for executable read from /proc/PID/exe.  Check it against
	the path's inode.
	(find_executable): Don't return the /proc path after open.

1998-03-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* realpath.c (MAXSYMLINKS): Define it as 10 if it isn't defined.
        
        * find_executable.c (find_executable): Duplicate local string
	in __linux__ return case.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* realpath.c (MAXSYMLINKS): Provide value for cygwin.
	Provide prototype for readlink.
	Use readlink directly instead of using old cygwin workaround.
	
	* Makefile (other_routines): Add realpath and find_executable.
	realpath.c, find_executable.c: New files.

1998-02-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* strdup.c, strndup.c, strsep.c, and stpcpy.c:  New files.

	* argp-pv.c: Don't initialize argp_program_version.

	* argp-ba.c: Don't initialize argp_program_bug_address.

	* Makefile (string_routines): Add strdup, strndup, strsep and stpcpy.

	* argp-parse.c (parser_finalize, parser_parse_arg,
	parser_parse_next): Add extra braces to avoid if/else compiler
	warnings.

	* getopt.c (_getopt_internal): Likewise.

	* argp-help.c (IsAlpha, IsAlnum, IsDigit, IsSpace): And and use
	new macros to avoid char index to array compiler warnings.
	(hol_entry_cmp, hol_append, arg, hol_entry_help, usage_long_opt,
	argp_args_usage): Add extra braces to avoid if/else compiler
	warnings.

	* argp-fmtstream.c (__argp_fmtstream_update): Add extra braces
	to avoid if/else compiler warning.
	
