@@ -31,11 +31,7 @@
 #endif
 #endif
 
-#define getopt getopt_
-#define optarg optarg_
 #include <stdio.h>
-#undef getopt
-#undef optarg
 
 /* Comment out all this code if we are using the GNU C Library, and are not
    actually compiling the library itself.  This code is part of the GNU C
